--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Snitap Patins</title>
@@ -17,7 +17,15 @@
 </head>
 
 <body>
-
+    <header>
+        <a href="#" title="Logo do app">
+            <img src="/assets/logo.svg" alt="">
+        </a>
+        <a href="#">
+            <img src="/assets/icons/shopping-bag.svg" alt="ícone de uma mala">
+            <span>1</span>
+        </a>
+    </header>
 </body>
 
 </html>
