--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     COMPRAR AGORA
                 </a>
 
-                <a href="#"class="button play">
+                <a href="#" class="button play">
                     <span class="shadow">
                         <img src="/assets/icons/play.svg" alt="">
                     </span>
@@ -60,6 +60,29 @@
                 <img src="/assets/hero/patins-image.png" alt="">
                 <img src="/assets/hero/stars-1.svg" alt="">
                 <img src="/assets/hero/stars-2.svg" alt="">
+            </div>
+        </div>
+    </section>
+
+    <section class="banner">
+        <div class="scroller bg-gradient-animate">
+            <div class="rolling">
+                <img src="/assets/banner.svg" alt="">
+                <img src="/assets/banner.svg" alt="">
+                <img src="/assets/banner.svg" alt="">
+                <img src="/assets/banner.svg" alt="">
+                <img src="/assets/banner.svg" alt="">
+                <img src="/assets/banner.svg" alt="">
+                <img src="/assets/banner.svg" alt="">
+                <img src="/assets/banner.svg" alt="">
+                <img src="/assets/banner.svg" alt="">
+                <img src="/assets/banner.svg" alt="">
+                <img src="/assets/banner.svg" alt="">
+                <img src="/assets/banner.svg" alt="">
+                <img src="/assets/banner.svg" alt="">
+                <img src="/assets/banner.svg" alt="">
+                <img src="/assets/banner.svg" alt="">
+                <img src="/assets/banner.svg" alt="">
             </div>
         </div>
     </section>
